[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy1.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 11 ), Vector2( 0, 1.43051e-06 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.65, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -3.66798e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ), Vector2( 0, -13.3333 ), Vector2( 0, -10.6667 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 11 ), Vector2( 0, 1.43051e-06 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ), Vector2( 0, -13.3333 ), Vector2( 0, -10.6667 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDmgLbl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 8 ), Vector2( -5, -34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyDmgLbl:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDmgLbl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -21, 7 ), Vector2( -21, -33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyDmgLbl:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDmgLbl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -13, 7 ), Vector2( -13, -34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyDmgLbl:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="WithRangedPnl" type="Panel" parent="."]
visible = false
margin_left = -42.0
margin_top = -18.0
margin_right = -14.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodPnl" type="Panel" parent="."]
visible = false
margin_left = -42.0
margin_top = -18.0
margin_right = -4.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoRangedPnl" type="Panel" parent="."]
visible = false
margin_left = -42.0
margin_top = -18.0
margin_right = -14.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLbl" type="Label" parent="."]
margin_left = -44.0
margin_top = -20.0
margin_right = -6.0
margin_bottom = -8.0
text = "Godfather"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="."]
margin_left = -44.0
margin_top = -6.0
margin_right = -6.0
margin_bottom = 6.0
text = "Hp: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvlLabel1" type="Label" parent="."]
margin_left = -44.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = -1.0
text = "Lvl: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="EnemyMeleeLbl" type="Label" parent="."]
margin_left = -44.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = 14.0
text = "Dusters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyRangeLbl" type="Label" parent="."]
margin_left = -44.0
margin_top = 10.0
margin_right = -6.0
margin_bottom = 22.0
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDmgLbl" type="Label" parent="."]
anchor_right = 0.569
margin_left = -13.0
margin_top = 7.0
margin_right = 2.0
margin_bottom = 20.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResistLbl" type="Label" parent="."]
visible = false
margin_left = -3.68559
margin_top = -25.9331
margin_right = 34.3144
margin_bottom = -13.9331
text = "R:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StunLbl" type="Label" parent="."]
visible = false
margin_left = -19.2305
margin_top = -26.4246
margin_right = 18.7695
margin_bottom = -14.4246
text = "Stn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/TakeDmg = SubResource( 3 )
anims/dead = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/TakeDmg = SubResource( 6 )
anims/dmgValAni = SubResource( 7 )
anims/dmgValAni2 = SubResource( 8 )
anims/dmgValAni3 = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
